# project-vendor-emails-extractor

./: .env.example  .gitignore  README.md  classify_jobs.py  conftest.py  debug_persistence.py  llm_based_classifier.py  pyproject.toml  requirements.txt  test_new_architecture.py  verify_imports.py  verify_service_json.py
configs/: config.yaml  logging.yaml
data/: job_training_data.csv
docker/: docker-compose.yml
email-extraction-bot/: .gitignore  Dockerfile  README.md  keywords.csv  requirements.txt  reset_tracker.py  service.py
email-extraction-bot/config/: config.yaml
email-extraction-bot/utils/: config.py
email-extraction-bot/utils/avatar/: __init__.py  candidate_util.py  job_activity_log_util.py  vendor_util.py
email-extraction-bot/utils/email/: __init__.py  connectors.py
email-extraction-bot/utils/extraction/: __init__.py  extractor.py  gliner_util.py  ner_util.py  regex_util.py
email-extraction-bot/utils/filters/: __init__.py  email_filters.py
email-extraction-bot/utils/logging/: logger.py
email-extractor/: .gitignore  classify_positions.py  labeled_data.csv  raw_positions_test_20260130_133416.json  requirements.txt  service.py  validate_setup.py  verify_auth.py  verify_csv_loading.py
email-extractor/config/: config.yaml
email-extractor/utils/: api_client.py
scripts/: check_local_data.py  diagnose_account.py  generate_duckdb_log.py  reset_tracker.py  sync_keywords_to_csv.py  view_duckdb.py
src/: run_workflow.py
src/extractor/: main.py
tests/: preflight_check.py  verify_dry_run.py  verify_recruiter_classifier.py  verify_robustness.py
(+59 files in other folders)
