[project]
name = "extractor"
version = "0.1.0"
description = "Extracts job leads from emails and other sources."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pyyaml",
    "pydantic",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
